--- a/src/style/style.css
+++ b/src/style/style.css
@@ -30,27 +30,28 @@
 
   }
   .left img{
-    width: 3.3vw;
-    height: 6vh;
+    width: 30%;
+    height: 30%;
     border-radius: 60px;
   }
+  .middle{
+      width: 100%;
+      text-align: center;
+  }
   header h1{
-      margin-left: 40px;
+      font-size: 3vw;
   }
 
   .right{
-      width: 20%;
+      width: 30%;
       margin-right: 20px;
       display: flex;
       justify-content: space-around;
   }
-  .right p{
-      font-size: 20px;
-      text-align: center;
-  }
-  .right .btn{
-   width: 40%;
-   padding: 8px 8px;
+ 
+  .right .btn ,.log-sign-btn{
+   width: 30%;
+   padding: 3%;
    border: 2px outset rgb(77, 66, 66);
    border-radius: 10px;
    cursor: pointer;
@@ -58,6 +59,8 @@
    box-shadow: 1px 2px 10px gray;
    text-decoration: none;
    text-align: center;
+   font-size: 1vw;
+   height: 2%;
   }
 
   #login{
@@ -70,10 +73,11 @@
   #signup{
       background-color: orangered;
   }
-#profile-btn{
+/* #profile-btn{
     background-color: rgb(243, 55, 55);
     margin-left: 40px;
-}
+} */
+
   /* Main products Slider styling */
    .main-slider img{
       width: 20%;
@@ -114,9 +118,12 @@
            line-height: 1;
            padding: 5px;
       }
+      .welcome-message h1{
+          font-size: 3vw;
+      }
       .welcome-message h3{
           color: rgb(25, 248, 55);
-          font-size: 21px;
+          font-size: 2vw;
       }
 
       /* Product cards styling */
@@ -126,12 +133,13 @@
       }
     .products h2{
         text-align: center;
-        font-size: 35pxpx;
-        color: blue;
+        font-size: 2vw;
+        color: rgb(11, 11, 37);
         margin: 30px;
     }
 .product-cards-slider{
     margin: 50px;
+    /* background-color: #d5e7e3; */
 }
 .product-image{
     margin-bottom: 10px;
@@ -190,7 +198,7 @@
      }
     /* Footer styling */
     .foot{
-        height: 300px;
+        height: 100%;
         background-color: rgb(7, 7, 7);
         display: flex;
         justify-content: space-between;
@@ -205,6 +213,9 @@
       border: none;
       box-shadow: 1px 2px 10px gray;
      }
+     .foot h2{
+         font-size: 2vw;
+     }
      .right-footer input::placeholder{
          color: rgb(247, 229, 229);
      }
@@ -216,6 +227,7 @@
         margin-left: 6px;
         background-color: rgb(252, 7, 7);
      }
+
      /* Login form styling */
      .signup-body{
          display: flex;
@@ -223,7 +235,8 @@
          background: url(../images/login-background.jpg);
          background-repeat:no-repeat;
          background-size: 100% 100%;
-         height: 150vh;
+         height: 100%;
+         margin: auto;
      }
      .login-body{
         display: flex;
@@ -240,6 +253,7 @@
          padding: 30px;
          text-align: center;
          margin: 0px auto;
+         height: 100%;
      }
      .login-signup-page form{
          display: flex;
@@ -251,6 +265,7 @@
      }
      .login-signup-page h1{
          color: chartreuse;
+         font-size: 3vw;
      }
      .login-signup-page p{
          color: white;
@@ -258,11 +273,13 @@
      .login-signup-page input{
          margin: 20px;
          padding: 10px;
+         height: 2%;
+
      }
      #login-signup-btn{
-         width: 90%;
+         width: 92%;
          margin: 20px auto;
-         padding: 10px;
+         padding: 4px;
          display: flex;
          justify-content: center;
          align-items: center;
@@ -271,6 +288,8 @@
          cursor: pointer;
          box-shadow: 2px 2px 10px gray;
          color:tomato;
+         font-size: 1.4vw;
+         height: 2%;
      }
      #login-signup-btn:hover{
          color: rgb(254, 254, 255);
@@ -310,13 +329,13 @@
          color: brown;
      }
      .items-container{
-         width: 50%;
+         width: 90%;
          background-color: rgb(178, 178, 179);
          margin: 20px auto;
          padding: 8px;
          display: flex;
          justify-content: space-between;
-         align-items: center;
+         align-items: center; 
      }
      
      /* .items-container  */
@@ -343,7 +362,8 @@
     .userpage{
         background-color: white;
     }
-    #sub-menu{
+    
+    .navbar{
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -354,9 +374,10 @@
         cursor: pointer;
         position: sticky;
     }
-    .sub-menu-tabs{
+    .nav-links{
         color: white;
     }
+    
     #home{
         margin: 30px auto;
     }
@@ -377,6 +398,7 @@
 }
 .orders h1{
     color: rgb(98, 150, 102);
+    font-size: 3vw;
 }
 .orders-table{
     width: 90%;
@@ -413,9 +435,7 @@ tr:hover {
 }
 #admin-products{
     background-color: green;
-    padding: 8px;
-    border-radius: 10px;
-    color: #fff;
+    
 }
 #admin-products:hover{
     background-color: rgb(160, 209, 114);
@@ -429,16 +449,16 @@ tr:hover {
 #admin-products-side{
     height: 80px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    font-size: 35px;
     text-align: center;
     background-color: rgb(64, 63, 73);
     color: rgb(252, 245, 249);;
-    padding: 20px;
 }
 #admin-products-side h1{
-    margin-left: 400px;
+    margin-right: 30%;
+    font-size: 3vw;
+
 }
 #products-form{
     width: 60%;
@@ -497,7 +517,7 @@ tr:hover {
     padding: 20px 0px;
 }
 .order-container{
-    width: 70%;
+    width: 90%;
     background-color: #161616;
     display: flex;
     justify-content: space-between;
@@ -519,4 +539,70 @@ tr:hover {
     background-color: rgb(170, 201, 247);
     color: rgb(17, 17, 17);
     box-shadow: 1px 2px 7px white;
+}
+
+.navbar-icon{
+  display: none;
+}
+/* .navbar{
+ float: none;
+ /* display: block; */
+ /* text-align: left; */
+/* } */ 
+.responsive{
+    /* display: flex;
+    flex-direction: column; */ 
+    display: block;
+    height: 100%;  
+    background-color:red;
+    padding: 20px;
+    background-color: rgb(100, 197, 116);
+
+}
+.responsive .nav-links{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    margin-bottom: 12px;
+}
+.responsive .navbar-icon{
+    margin-left: 10px;
+}
+.responsive #order-btn{
+    display: block;
+}
+.responsive #wishlist-btn{
+    display: block;
+}
+/* For responsive login form */
+@media screen and (max-width: 800px) {
+   .login-signup-page{
+       width: 80%;
+   } 
+   .login-signup-page h1{
+    font-size: 4vw;
+}
+.navbar-icon{
+    display: block;
+    width: 200px;
+    margin-top: 10px;
+    color: #fff;
+}
+.navbar .nav-links{
+   display: none;     
+}
+.right .btn{
+    display: none;
+}
+
+}
+@media (max-width: 1985px) and (min-width: 801px) {
+   .login-signup-page{
+       width: 50%;
+   } 
+}
+@media screen and (max-width:945px){
+    .items-container{
+        width: 90%;
+    }
 }
