--- a/src/style/style.css
+++ b/src/style/style.css
@@ -616,11 +616,12 @@ tr:hover {
        padding: 0px;
    }
    .left img{
-    width: 10%;
-    height: 10%;
+    width: 40px;
+    height: 30px;
     border-radius: 60px;
   }
   header h1{
+      width: 200px;
       margin-right: 30px;
 }
 
