--- a/src/style/style.css
+++ b/src/style/style.css
@@ -581,6 +581,7 @@ tr:hover {
     .log-sign-btn{
         width: 30px;
         height: 15px;
+        font-size: 10px;
     }
    .login-signup-page{
        width: 100%;
@@ -622,7 +623,7 @@ tr:hover {
   }
   header h1{
       width: 170px;
-      margin-right: 30px;
+      margin-right: 20px;
 }
 
 }
