--- a/src/style/style.css
+++ b/src/style/style.css
@@ -591,6 +591,7 @@ tr:hover {
    } 
    .login-signup-page h1{
     font-size: 6vw;
+    margin-left: 20px;
 }
 .navbar-icon{
     display: block;
@@ -614,7 +615,7 @@ tr:hover {
        width: 720px;
    }
    .top{
-       height: 10%;
+       height: 15%;
        padding: 5px;
    }
    .foot{
