--- a/src/style/style.css
+++ b/src/style/style.css
@@ -201,7 +201,7 @@
         height: 100%;
         background-color: rgb(7, 7, 7);
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         padding :20px 40px;
         color: rgb(252, 252, 253);
@@ -214,7 +214,7 @@
       box-shadow: 1px 2px 10px gray;
      }
      .foot h2{
-         font-size: 2vw;
+         font-size: 3vw;
      }
      .right-footer input::placeholder{
          color: rgb(247, 229, 229);
@@ -640,6 +640,9 @@ tr:hover {
        padding: 2px;
        margin-top: 2px;
        margin-right: 2px;
+   }
+   .left-footer{
+       line-height: 0.5;
    }
 }
 @media (max-width: 1985px) and (min-width: 801px) {
