--- a/src/style/style.css
+++ b/src/style/style.css
@@ -214,7 +214,7 @@
       box-shadow: 1px 2px 10px gray;
      }
      .foot h2{
-         font-size: 3vw;
+         font-size: 2vw;
      }
      .right-footer input::placeholder{
          color: rgb(247, 229, 229);
@@ -619,7 +619,7 @@ tr:hover {
        padding: 5px;
    }
    .foot{
-      padding: 2px;    
+      padding: 8px 2px;    
       font-size: 10px;
    }
    .left img{
