--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;  
-
+    overflow: hidden;
   }
   
   body {
@@ -201,9 +201,9 @@
         height: 100%;
         background-color: rgb(7, 7, 7);
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        padding :20px 40px;
+        padding :20px 100px;
         color: rgb(252, 252, 253);
         cursor: pointer;
     }
@@ -214,7 +214,8 @@
       box-shadow: 1px 2px 10px gray;
      }
      .foot h2{
-         font-size: 2vw;
+         font-size: 1.5vw;
+         margin-bottom: 10px;
      }
      .right-footer input::placeholder{
          color: rgb(247, 229, 229);
@@ -287,7 +288,7 @@
          border: none;
          cursor: pointer;
          box-shadow: 2px 2px 10px gray;
-         color:tomato;
+         color:rgb(69, 4, 247);
          font-size: 1.4vw;
          height: 2%;
      }
@@ -587,7 +588,7 @@ tr:hover {
         margin-right: 10px;
     }
    .login-signup-page{
-       width: 100%;
+       width: 400px;
    } 
    .login-signup-page h1{
     font-size: 6vw;
@@ -619,6 +620,7 @@ tr:hover {
        padding: 5px;
    }
    .foot{
+      justify-content: space-around;
       padding: 8px 2px;    
       font-size: 10px;
    }
