--- a/src/style/style.css
+++ b/src/style/style.css
@@ -132,9 +132,9 @@
       }
     .products h2{
         text-align: center;
-        font-size: 2vw;
+        font-size: 3vw;
         color: rgb(11, 11, 37);
-        margin: 30px;
+        margin: 10px 30px;
     }
 .product-cards-slider{
     margin: 50px;
@@ -629,7 +629,7 @@ tr:hover {
     border-radius: 60px;
   }
   header h1{
-      width: 150px;
+      width: 200px;
       margin-right: 5px;
       margin-top:3px ;
       font-size: 15px;
