--- a/src/style/style.css
+++ b/src/style/style.css
@@ -237,6 +237,7 @@
          background-size: 100% 100%;
          height: 100%;
          margin: auto;
+         overflow: hidden;
      }
      .login-body{
         display: flex;
@@ -245,6 +246,7 @@
         background-repeat:no-repeat;
         background-size: 100% 100%;
         height: 100vh;
+        overflow: hidden;
      }
      .login-signup-page{
         display: flex;
@@ -583,6 +585,9 @@ tr:hover {
         height: 25px;
         font-size: 10px;
     }
+    #log-sign-btn{
+        padding: 8px;
+    }
     #login{
         margin-right: 10px;
     }
@@ -644,6 +649,9 @@ tr:hover {
    }
    .left-footer{
        line-height: 0.5;
+   }
+   .products h2{
+       font-size: 5vw;
    }
 }
 @media (max-width: 1985px) and (min-width: 801px) {
