--- a/src/style/style.css
+++ b/src/style/style.css
@@ -586,7 +586,9 @@ tr:hover {
         font-size: 10px;
     }
     #log-sign-btn{
-        padding: 8px;
+        padding: 15px 8px;
+        width: 70%;
+        font-size:8px ;
     }
     #login{
         margin-right: 10px;
