--- a/src/style/style.css
+++ b/src/style/style.css
@@ -524,7 +524,7 @@ tr:hover {
     background-color: #161616;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin: 40px auto;
     padding: 40px;
@@ -659,17 +659,30 @@ tr:hover {
      padding: 10px;
      width: 200px;
      font-size: 12px;
-     margin-left: 25px;
+     margin-right: 20px;
  }
+ #sub-menu .right{
+     width: 80%;
+     justify-content: flex-start;
+     margin-left: 7px;
+ }
+ .items-container{
+     justify-content: space-evenly;
+}
+.item-name{
+    margin-right: 20px;
+}
+.order-container img, .order-container div{
+ margin-bottom: 36px;
+}
+.order-container{
+    width: 98%;
+    margin:10px auto;
+}
 
 }
 @media (max-width: 1985px) and (min-width: 801px) {
    .login-signup-page{
        width: 50%;
    } 
-}
-@media screen and (max-width:945px){
-    .items-container{
-        width: 90%;
-    }
 }
