--- a/src/style/style.css
+++ b/src/style/style.css
@@ -667,7 +667,9 @@ tr:hover {
      margin-left: 7px;
  }
  .items-container{
-     justify-content: space-evenly;
+     justify-content: flex-start;
+     flex-wrap: nowrap;
+     height: 80px;
 }
 .item-name{
     margin-right: 20px;
@@ -678,6 +680,9 @@ tr:hover {
 .order-container{
     width: 90%;
     margin:10px auto;
+}
+.order{
+    margin-right:6px;
 }
 
 }
